# polars-cloud-client

./: LICENSE  docs  pyproject.toml
.github/workflows/: pr.yml
client/: Cargo.toml  pyproject.toml
client/src/: aws.rs  compute.rs  error.rs  lib.rs  organization.rs  query.rs  query_control_grpc.rs  query_grpc.rs  query_settings.rs  runtime.rs  serde_types.rs  service_account.rs  user.rs  workspace.rs
client/src/client/: api_client.rs  auth.rs  mod.rs
contracts/: Cargo.toml
contracts/crates/axum-models/src/: compute.rs  lib.rs
contracts/crates/control-plane-client/src/: client.rs
contracts/crates/protos-client-compute/protos/polars_cloud/compute_plane/client/v1/: submit_query.proto
contracts/crates/protos-client-compute/src/: client.rs
contracts/crates/protos-common/src/: lib.rs  query_info.rs
docs/source/: conf.py
docs/source/reference/: index.rst
docs/source/reference/query/: lazyframe_remote.rst
docs/source/reference/query/result/: index.rst  query_progress.rst
